--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -36,9 +36,9 @@ jobs:
         secretId: ${{ env.SECRET_ID }}
         exportEnv: false
         secrets: |
-          aws access_key | AWS_ACCESS_KEY_ID ;
-          aws secret_key | AWS_SECRET_ACCESS_KEY ;
-          github/eksctlDeployKey pat | PAT_FOR_DEPLOY_KEY
+          secret/aws access_key | AWS_ACCESS_KEY_ID ;
+          secret/aws secret_key | AWS_SECRET_ACCESS_KEY ;
+          secret/github/eksctlDeployKey pat | PAT_FOR_DEPLOY_KEY
     # Authenticate with AWS
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
