--- a/flux/flux-deployment.yaml
+++ b/flux/flux-deployment.yaml
@@ -66,7 +66,7 @@ spec:
         # There are no ":latest" images for flux. Find the most recent
         # release or image version at https://hub.docker.com/r/fluxcd/flux/tags
         # and replace the tag here.
-        image: docker.io/fluxcd/flux:1.20.1
+        image: docker.io/fluxcd/flux:1.21.0
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -142,18 +142,19 @@ spec:
         # Replace the following URL to change the Git repository used by Flux.
         # HTTP basic auth credentials can be supplied using environment variables:
         # https://$(GIT_AUTHUSER):$(GIT_AUTHKEY)@github.com/user/repository.git
-        - --git-url=git@github.com:cakely/api-ops.git
+        - --git-url=git@github.com:Rubiooo/api-ops.git
         - --git-branch=master
         # Include this if you want to restrict the manifests considered by flux
         # to those under the following relative paths in the git repository
         # - --git-path=subdir1,subdir2
         - --git-label=flux
-        - --git-user=imjohnbo
-        - --git-email=imjohnbo@github.com
+        - --git-user=Rubiooo
+        - --git-email=maplerubiooo@github.com
 
         # Include these two to enable git commit signing
         # - --git-gpg-key-import=/root/gpg-import
         # - --git-signing-key=<key id>
+        
         # Include this to enable git signature verification
         # - --git-verify-signatures
 
